--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build: .
@@ -7,29 +5,8 @@ services:
       - "5000:5000"
     environment:
       - FLASK_ENV=development
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/resume_matcher
-      - QDRANT_URL=http://qdrant:6333
-    depends_on:
-      - db
-      - qdrant
-
-  db:
-    image: postgres:13
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=resume_matcher
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-  qdrant:
-    image: qdrant/qdrant
-    ports:
-      - "6333:6333"
-      - "6334:6334"
-    volumes:
-      - qdrant_data:/qdrant/storage
-
-volumes:
-  postgres_data:
-  qdrant_data:
+      - .:/app
+      - ./data:/app/data
+    command: ["flask", "run", "--host=0.0.0.0"]
