--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,29 @@
 # Core parsing and NLP libraries
-spacy==3.7.2
-spacy-transformers==1.3.4
-nltk==3.8.1
-transformers==4.35.2
-torch==2.1.1
-sentence-transformers==2.2.2
+spacy==3.8.7
+spacy-transformers==1.3.9
+sentence-transformers==5.1.0
+nltk==3.9.1
+transformers==4.55.0
+torch==2.8.0
+huggingface-hub==0.34.3
+safetensors==0.6.1
+tokenizers==0.21.4
+spacy-curated-transformers==0.3.1
 
 # PDF and document processing
 PyMuPDF==1.23.8
-pdfplumber==0.10.3
-pdfminer.six==20231228
-python-docx==1.1.0
+pdfplumber==0.11.7
+pdfminer.six==20250506
+python-docx==1.2.0
 pytesseract==0.3.10
-Pillow==10.1.0
+Pillow==11.3.0
+pypdfium2==4.30.0
+pdfplumber==0.11.7
 
 # Contact information and validation
-phonenumbers==8.13.23
-email-validator==2.1.0
-nameparser==1.1.2
+phonenumbers==9.0.11
+email-validator==2.2.0
+nameparser==1.1.3
 pyresparser==1.0.6
 
 # Text processing and analysis
@@ -25,23 +31,32 @@ textstat==0.7.3
 pyenchant==3.2.2
 language-tool-python==2.7.1
 rapidfuzz==3.5.2
+regex==2025.7.34
 
 # Machine learning and data processing
-scikit-learn==1.3.2
-numpy==1.25.2
+scikit-learn==1.7.1
+numpy==2.2.6
+scipy==1.15.3
 pandas==2.1.3
 
 # Flask and web framework
-Flask==2.3.3
+Flask==3.1.1
 Flask-CORS==4.0.0
+Werkzeug==3.1.3
+Flask-Login==0.6.3
+itsdangerous==2.2.0
+blinker==1.9.0
 
 # OpenAI and LLM services
-openai==1.3.5
+openai==1.99.3
+requests-aws4auth==1.3.1
+boto3==1.40.5
+botocore==1.40.5
+jmespath==1.0.1
+s3transfer==0.13.1
+opensearch-py==3.0.0
 
 # Utility libraries
-python-dateutil==2.8.2
-concurrent-futures==3.1.1
-pathlib==1.0.1
 textstat>=0.7.0
 pyenchant>=3.2.2
 language-tool-python>=2.7.1
